--- a/RxJavaRetrofit/app/build.gradle
+++ b/RxJavaRetrofit/app/build.gradle
@@ -1,5 +1,9 @@
 apply plugin: 'com.android.application'
 
+Properties props = new Properties()
+props.load(new FileInputStream("$projectDir/src/main/assets/environment.properties"))
+props.each { prop -> project.ext.set(prop.key, prop.value) }
+
 android {
     compileSdkVersion 27
     defaultConfig {
@@ -15,6 +19,21 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
+    }
+
+    flavorDimensions "development", "test"
+    productFlavors {
+        main {
+            buildConfigField 'String', 'BASE_URL', project.BASE_URL
+            dimension "development"
+        }
+        dev {
+            dimension "test"
+        }
+    }
+    compileOptions {
+        sourceCompatibility = '1.8'
+        targetCompatibility = '1.8'
     }
 }
 
