--- a/JInstantSearch/app/build.gradle
+++ b/JInstantSearch/app/build.gradle
@@ -50,10 +50,10 @@ dependencies {
 
     //Retrofit libraries
     implementation 'com.squareup.retrofit2:retrofit:2.4.0'
-    implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
     implementation 'com.squareup.retrofit2:adapter-rxjava:2.4.0'
-    implementation 'com.squareup.okhttp3:okhttp:3.10.0'
-    implementation 'com.squareup.okhttp3:logging-interceptor:3.9.1'
+    implementation 'com.squareup.okhttp3:okhttp:3.11.0'
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.11.0'
     implementation 'com.google.code.gson:gson:2.8.5'
 
     //RxAndroid libraries
@@ -62,16 +62,16 @@ dependencies {
     implementation 'com.jakewharton.retrofit:retrofit2-rxjava2-adapter:1.0.0'
 
     //Dagger libraries
-    implementation 'com.google.dagger:dagger:2.13'
-    annotationProcessor 'com.google.dagger:dagger-compiler:2.13'
+    //implementation 'com.google.dagger:dagger:2.13'
+    //annotationProcessor 'com.google.dagger:dagger-compiler:2.13'
 
     //ButterKnife libraries
     implementation 'com.jakewharton:butterknife:8.8.1'
     annotationProcessor "com.jakewharton:butterknife-compiler:8.8.1"
-    implementation "com.jakewharton.rxbinding2:rxbinding:2.0.0"
+    implementation "com.jakewharton.rxbinding2:rxbinding:2.1.1"
 
     //Glide libraries
-    implementation "com.github.bumptech.glide:glide:4.3.1"
+    implementation "com.github.bumptech.glide:glide:4.9.0"
 
     //Test Unit libraries
     testImplementation 'junit:junit:4.12'
