--- a/JCleanArchitectureApp/appdagger/build.gradle
+++ b/JCleanArchitectureApp/appdagger/build.gradle
@@ -68,6 +68,11 @@ dependencies {
     //Google librries
     implementation 'com.google.android.material:material:1.1.0'
 
+    // Room components
+    implementation 'androidx.room:room-runtime:2.2.5'
+    annotationProcessor 'androidx.room:room-compiler:2.2.5'
+    androidTestImplementation 'androidx.room:room-testing:2.2.5'
+
     //Retrofit libraries
     implementation 'com.squareup.retrofit2:retrofit:2.7.2'
     implementation 'com.squareup.retrofit2:converter-gson:2.7.2'
